// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Menu Disabled Menu 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  position: relative;
  display: inline-block;
}

.emotion-2 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-3 {
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-3:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-3:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-3:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-4 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #ffffff;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0rem;
}

.emotion-6 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-8 path {
  fill: #ffffff;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          role="button"
        >
          <div
            className="emotion-1"
          >
            <div
              className="emotion-2"
            >
              <button
                className="emotion-3"
                data-testid="button"
                disabled={true}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-4"
                >
                  <span
                    className="emotion-5"
                  >
                    <div
                      className="emotion-6"
                      data-testid="_avatar"
                    >
                      TC
                    </div>
                    <span>
                      <span>
                        Tom Cruise
                      </span>
                    </span>
                    <span
                      className="emotion-7"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-8"
                      />
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Menu Menu with avatar and different button colour 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  position: relative;
  display: inline-block;
}

.emotion-2 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-3 {
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-3:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-3:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-3:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-4 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #ffffff;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0rem;
}

.emotion-6 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-8 path {
  fill: #ffffff;
}

.emotion-24 {
  fill: #1451dc;
  width: 1rem;
  height: 1rem;
}

.emotion-24 path {
  fill: #1451dc;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          role="button"
        >
          <div
            className="emotion-1"
          >
            <div
              className="emotion-2"
            >
              <button
                className="emotion-3"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-4"
                >
                  <span
                    className="emotion-5"
                  >
                    <div
                      className="emotion-6"
                      data-testid="_avatar"
                    >
                      TC
                    </div>
                    <span>
                      <span>
                        Tom Cruise
                      </span>
                    </span>
                    <span
                      className="emotion-7"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-8"
                      />
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          role="button"
        >
          <div
            className="emotion-1"
          >
            <div
              className="emotion-2"
            >
              <button
                className="emotion-3"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-4"
                >
                  <span
                    className="emotion-5"
                  >
                    <div
                      className="emotion-6"
                      data-testid="_avatar"
                    >
                      <img
                        src="https://mui.com/static/images/avatar/1.jpg"
                      />
                    </div>
                    <span>
                      <span>
                        Tom Cruise
                      </span>
                    </span>
                    <span
                      className="emotion-7"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-8"
                      />
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          role="button"
        >
          <div
            className="emotion-1"
          >
            <div
              className="emotion-2"
            >
              <button
                className="emotion-3"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-4"
                >
                  <span
                    className="emotion-5"
                  >
                    <div
                      className="emotion-6"
                      data-testid="_avatar"
                    >
                      <span
                        className="emotion-7"
                        onClick={[Function]}
                      >
                        <span
                          className="emotion-24"
                        />
                      </span>
                    </div>
                    <span>
                      <span>
                        Tom Cruise
                      </span>
                    </span>
                    <span
                      className="emotion-7"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-8"
                      />
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          role="button"
        >
          <div
            className="emotion-1"
          >
            <div
              className="emotion-2"
            >
              <button
                className="emotion-3"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-4"
                >
                  <span
                    className="emotion-5"
                  >
                    <div
                      className="emotion-6"
                      data-testid="_avatar"
                    >
                      <span
                        className="emotion-7"
                        onClick={[Function]}
                      >
                        <span
                          className="emotion-24"
                        />
                      </span>
                    </div>
                    <span>
                      <span>
                        Tom Cruise
                      </span>
                    </span>
                    <span
                      className="emotion-7"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-8"
                      />
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Menu Menu with option icon and different colour 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  position: relative;
  display: inline-block;
}

.emotion-2 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-3 {
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-3:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-3:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-3:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-4 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #ffffff;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0rem;
}

.emotion-6 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #1451dc;
  width: 1rem;
  height: 1rem;
}

.emotion-8 path {
  fill: #1451dc;
}

.emotion-10 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-10 path {
  fill: #ffffff;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          role="button"
        >
          <div
            className="emotion-1"
          >
            <div
              className="emotion-2"
            >
              <button
                className="emotion-3"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-4"
                >
                  <span
                    className="emotion-5"
                  >
                    <div
                      className="emotion-6"
                      data-testid="_avatar"
                    >
                      <span
                        className="emotion-7"
                        onClick={[Function]}
                      >
                        <span
                          className="emotion-8"
                        />
                      </span>
                    </div>
                    <span>
                      <span>
                        More
                      </span>
                    </span>
                    <span
                      className="emotion-7"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-10"
                      />
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          role="button"
        >
          <div
            className="emotion-1"
          >
            <div
              className="emotion-2"
            >
              <button
                className="emotion-3"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-4"
                >
                  <span
                    className="emotion-5"
                  >
                    <div
                      className="emotion-6"
                      data-testid="_avatar"
                    >
                      <span
                        className="emotion-7"
                        onClick={[Function]}
                      >
                        <span
                          className="emotion-8"
                        />
                      </span>
                    </div>
                    <span>
                      <span>
                        More
                      </span>
                    </span>
                    <span
                      className="emotion-7"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-10"
                      />
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          role="button"
        >
          <div
            className="emotion-1"
          >
            <div
              className="emotion-2"
            >
              <button
                className="emotion-3"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-4"
                >
                  <span
                    className="emotion-5"
                  >
                    <div
                      className="emotion-6"
                      data-testid="_avatar"
                    >
                      <span
                        className="emotion-7"
                        onClick={[Function]}
                      >
                        <span
                          className="emotion-8"
                        />
                      </span>
                    </div>
                    <span>
                      <span>
                        More
                      </span>
                    </span>
                    <span
                      className="emotion-7"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-10"
                      />
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Menu Menu with selection handler 1`] = `
.emotion-0 {
  position: relative;
  display: inline-block;
}

.emotion-1 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-2 {
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-2:focus-visible:not(:disabled) {
  outline: #8833ff auto 0.125rem;
}

.emotion-2:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-2:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-2:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-3 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #ffffff;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div>
      <div>
        Selected: 
        <b>
          -
        </b>
      </div>
      <div
        role="button"
      >
        <div
          className="emotion-0"
        >
          <div
            className="emotion-1"
          >
            <button
              className="emotion-2"
              data-testid="button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span
                className="emotion-3"
              >
                <span
                  className="emotion-4"
                >
                  <span>
                    <span>
                      More
                    </span>
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
